tests/snapshots/variable_store_tests__replace_previous_body_variable_bool.snap
---
source: tests/variable_store_tests.rs
assertion_line: 138
expression: parsed
---
HttpFile {
    options: SnapOptions {
        include_headers: true,
    },
    verb: GET,
    url: "https://localhost:5000/items",
    headers: [
        Header {
            name: "Accept",
            value: "application/json",
        },
    ],
    body: Json {
        element: Element {
            value: Object(
                Object {
                    members: [
                        Member {
                            key: "anonymous",
                            value: Element {
                                value: Boolean(
                                    true,
                                ),
                            },
                        },
                    ],
                },
            ),
        },
    },
    snapshot: Snapshot {
        status: Exact(
            Null,
        ),
        headers: [],
        body: JsonComparer {
            element: ElementComparer {
                value: Exact(
                    Null,
                ),
            },
        },
    },
}
