tests/snapshots/variable_store_tests__replace_previous_body_variable_number.snap
---
source: tests/variable_store_tests.rs
assertion_line: 66
expression: parsed
---
HttpFile {
    options: SnapOptions {
        include_headers: true,
    },
    verb: GET,
    url: "https://localhost:5000/items/123",
    headers: [
        Header {
            name: "Accept",
            value: "application/json",
        },
    ],
    body: Json {
        element: Element {
            value: Null,
        },
    },
    snapshot: Snapshot {
        status: Exact(
            Null,
        ),
        headers: [],
        body: JsonComparer {
            element: ElementComparer {
                value: Exact(
                    Null,
                ),
            },
        },
    },
}
